# Simple-Brick-Game

./: README.md
src/: CMakeLists.txt  Doxyfile  Makefile
src/brick_game/api/: api.h
src/brick_game/snake/: snake.cc  snake.h
src/brick_game/tetris/: tetrisModel.cc  tetrisModel.h
src/controller/: cli_controller.h  desk_controller.cc  desk_controller.h
src/doc/html/: annotated.html  api_8h_source.html  classbrick__game_1_1CliView-members.html  classbrick__game_1_1CliView.html  classbrick__game_1_1DeskViewer-members.html  classbrick__game_1_1DeskViewer.html  classbrick__game_1_1DeskViewer__inherit__graph.map  classbrick__game_1_1DeskViewer__inherit__graph.md5  classbrick__game_1_1FieldBlock-members.html  classbrick__game_1_1FieldBlock.html  classbrick__game_1_1FieldBlock__inherit__graph.map  classbrick__game_1_1FieldBlock__inherit__graph.md5  classbrick__game_1_1GameLabel-members.html  classbrick__game_1_1GameLabel.html  classbrick__game_1_1GameLabel__coll__graph.map  classbrick__game_1_1GameLabel__inherit__graph.md5  classbrick__game_1_1Model-members.html  classbrick__game_1_1Model.html  classbrick__game_1_1Model__inherit__graph.map  classbrick__game_1_1Model__inherit__graph.md5  classbrick__game_1_1SnakeModel-members.html  classbrick__game_1_1SnakeModel.html  classbrick__game_1_1SnakeModel__coll__graph.map  classbrick__game_1_1SnakeModel__coll__graph.md5  classbrick__game_1_1SnakeModel__inherit__graph.map  classbrick__game_1_1TetrisModel-members.html  (+50 more)
src/install/: Cli  Desk
src/start_game/: start_cli.cc  start_desk.cc
src/test/: test.cc  testS.h  testT.h
(+46 files in other folders)
